2005-01-17 23:02  PeterB

	* src/: balsa-message.c, sendmsg-window.c: port from
	GtkFileSelection to GtkFileChooserDialog.

2005-01-17 18:14  Albrecht Dreß <albrecht.dress@arcor.de>

	* src/balsa-message.c, libbalsa/misc.c, libbalsa/misc.h: multiline
	URL highlighting.

2005-01-17  Pawel Salek

	* libbalsa/address-entry.c: add missing #include.
	* libbalsa/identity.h: 
	* libinit_balsa/balsa-druid-page-user.c: port it to InternetAddress.

2005-01-17 14:32  PeterB

	* libbalsa/address-entry.c: use list->address instead of
	internet_address_list_get_address.

2005-01-17 13:41  PeterB

	* src/balsa-message.c, src/message-window.c, src/print.c,
	src/save-restore.c, src/sendmsg-window.c, src/store-address.c,
	libbalsa/abook-completion.c, libbalsa/abook-completion.h,
	libbalsa/address-book-ldif.c, libbalsa/address-book-vcard.c,
	libbalsa/address-entry.c, libbalsa/address-entry.h,
	libbalsa/address.c, libbalsa/address.h, libbalsa/body.h,
	libbalsa/files.h, libbalsa/filter.c, libbalsa/identity.c,
	libbalsa/identity.h, libbalsa/libbalsa.h,
	libbalsa/libbalsa_private.h, libbalsa/mailbox.c,
	libbalsa/mailbox.h, libbalsa/mailbox_imap.c,
	libbalsa/mailbox_local.c, libbalsa/mailbox_mbox.c,
	libbalsa/message.c, libbalsa/message.h, libbalsa/misc.c,
	libbalsa/misc.h, libbalsa/send.c: use GMime's InternetAddress
	instead of LibBalsaAddress, except for address-book entries.

2005-01-17 10:36  PeterB

	* src/: toolbar-factory.c, toolbar-prefs.c: remove redundant
	includes.

2005-01-14 08:32  PeterB

	* configure.in, images/Makefile.am, src/balsa-message.c,
	src/expand-alias.c, src/expand-alias.h, src/sendmsg-window.c,
	images/mimetypes/Makefile, images/mimetypes/Makefile.am,
	images/mimetypes/Makefile.in,
	images/mimetypes/gnome-mime-application-pgp-signature.png,
	images/mimetypes/gnome-mime-application-pkcs7-mime.png,
	images/mimetypes/gnome-mime-application-pkcs7-signature.png,
	images/mimetypes/gnome-mime-application-x-pkcs7-signature.png,